[package]
name = "room-matcher"
version = "0.1.0"
edition = "2021"
description = "A program to match people in rooms of 2"
license = "MIT"
repository = "https://github.com/jas-dzied/room-matcher"
keywords = ["binary"]
categories = ["utilities"]

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
common_macros = "0.1.1"
rand = "0.8.5"
toml = "0.7.3"
